--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "nodemon": "nodemon server.js"
   },
   "engines": {
-    "node": "18.12.1"
+    "node": "18.x"
   },
   "repository": {
     "type": "git",
